Fix mission text spacing

--- a/landing/css/custom.css
+++ b/landing/css/custom.css
@@ -102,7 +102,7 @@
 }
 
 #carousel-children {
-	padding: 40px 0px;
+	padding: 0px 0px 40px 0;
 }
 
 #carousel-children img {
@@ -207,7 +207,8 @@
 }
 
 .mission .mission-heading h1 {
-    font-size: 20px;
+    font-size: 24px;
+    line-height: 28px;
 }
 }
 
